TB 78 tray notification issues (tray notification stay around after close, if multiple thunderbird versions running at the same time)
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(thunderbird_esr78+ fixed, thunderbird84 fixed)
People
(Reporter: wrhenshaw99, Assigned: Paenglab)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
95.46 KB,
image/png
|
Details | |
|
2.58 KB,
patch
|
mkmelin
:
review+
wsmwk
:
approval-comm-beta+
wsmwk
:
approval-comm-esr78+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.102 Safari/537.36
Steps to reproduce:
Two problems that might be related.
-
I sent an email from one of my accounts to another of my accounts. I got "new mail" icon in the tray. I sent another message to the same account. I got another "new mail" icon in the tray. I get a new "new mail" icon for every email I do this for. If I run my cursor over the icons in the tray, they all disappear except for one. This does not happen in TB 68 on the same computer.
-
I get a new mail message and the "new message" icon is in the tray. I completely close TB. The mail icon does not go away, but stays in the tray. This does not happen in TB 68 on the same computer.
I am on Windows 10 1909.
Actual results:
-
I sent an email from one of my accounts to another of my accounts. I got "new mail" icon in the tray. I sent another message to the same account. I got another "new mail" icon in the tray. I get a new "new mail" icon for every email I do this for. If I run my cursor over the icons in the tray, they all disappear except for one. This does not happen in TB 68 on the same computer.
-
I get a new mail message and the "new message" icon is in the tray. I completely close TB. The mail icon does not go away, but stays in the tray. This does not happen in TB 68 on the same computer.
Expected results:
-
I should have only one tray icon no matter how many emails I get.
-
When closing TB, the tray icon should go away.
Updated•5 years ago
|
Comment 2•5 years ago
|
||
I cannot verify the first problem on Windows 8.1 exactly:
I only get one Mail-Symbol in tray BUT the information of that symbol is "you have one new mail" but I have 6.
cool ... and if I click on that symbol TB crashed :
"Thunderbird 78.2.2 Crash Report [@ nsCOMArray_base::Clear ]" bp-47f6be19-cce0-4d42-bce2-dc4f00200916
Comment 3•5 years ago
|
||
And after Restart(In reply to Robert Hartmann from comment #2)
I cannot verify the first problem on Windows 8.1 exactly:
I only get one Mail-Symbol in tray BUT the information of that symbol is "you have one new mail" but I have 6.
cool ... and if I click on that symbol TB crashed :
"Thunderbird 78.2.2 Crash Report [@ nsCOMArray_base::Clear ]" bp-47f6be19-cce0-4d42-bce2-dc4f00200916
And after restarting TB I had immediately two symbols as tray notification.
Comment 4•5 years ago
|
||
(In reply to Robert Hartmann from comment #3)
And after Restart(In reply to Robert Hartmann from comment #2)
I cannot verify the first problem on Windows 8.1 exactly:
I only get one Mail-Symbol in tray BUT the information of that symbol is "you have one new mail" but I have 6.
cool ... and if I click on that symbol TB crashed :
"Thunderbird 78.2.2 Crash Report [@ nsCOMArray_base::Clear ]" bp-47f6be19-cce0-4d42-bce2-dc4f00200916And after restarting TB I had immediately two symbols as tray notification.
After closing this TB instance. TB is not running any more, checked with processexplorer,
there exists one of these mail symbols until I moved the mouse pointer to it.
Comment 5•5 years ago
|
||
I can not reproduce the behaviour at the moment (78.2.2), but I know this behaviour (multiple icons until I move the mouse over them) from the past 60 / 68 ? Maybe it is unrelated to a specific Thunderbird version or maybe it is completely unrelated to Thunderbird and more a OS bug?
| Reporter | ||
Comment 6•5 years ago
|
||
I don't think so. I have never had this before in any other version of TB. I currently have both TB 68 and TB 78 installed on my Windows 10 PC. It does not happen with TB 68, only with TB 78. It happens consistently for me.
Bill
| Reporter | ||
Comment 7•5 years ago
|
||
Any progress on this? It is still happening to me in TB 78.3.2.
Bill
Comment 8•5 years ago
|
||
| Reporter | ||
Comment 9•5 years ago
|
||
Still happening in 78.4.0. I apologize for continuing to post to this bug, I'm trying to be patient. It has been a month and I haven't heard anything back on this.
I really need to know if it is being looked at. Will there be a fix coming anytime soon? I was up to 34 tray icons for TB 78 today. If a fix isn't forthcoming sometime in the foreseeable future, I'm going to have to go back to TB 68.
Please, can someone respond?
Thanks,
Bill
Comment 10•5 years ago
|
||
Whatever is happening here can't be very common as I don't know of other reports about it.
To fix it we need to find out what the cause is - why it happens on your system but not in general.
| Assignee | ||
Comment 11•5 years ago
|
||
I see this only sometimes when I try multiple TB versions. When I then close a TB when it has a new mail notification, it can happen that the notification stays in tray. It look like TB closes before it can clear the notification during the shutdown.
Comment 12•5 years ago
|
||
(In reply to Richard Marti (:Paenglab) from comment #11)
I see this only sometimes when I try multiple TB versions. When I then close a TB when it has a new mail notification, it can happen that the notification stays in tray. It look like TB closes before it can clear the notification during the shutdown.
Yes, I can confirm this. It seems the multiple notification tray icons are a result of my multiple test versions, when I start them for addon development multiple times and/or in multiple versions. And, like I said above, I know this "error" for a long time.
| Reporter | ||
Comment 13•5 years ago
|
||
That may be the cause of my problem as well then as I have 68 and 78 both installed. I am still waiting for a couple of my add-ons to be converted for 78. Once they are converted I can move to 78 and uninstall 68.
This still seems like a bug. TB should be able to keep straight the notifications for each version installed and not end up with multiple icons in the tray.
Bill
Comment 14•5 years ago
|
||
It may be a bug, but it seems there is a maximum of one tray icon per startet Thunderbird session. In the case of Richard Marti and me, we restart Thunderbird sessions dozens of times.
| Reporter | ||
Comment 15•5 years ago
|
||
I guess I'm confused when you say a maximum of one tray icon per TB session. If both TB 68 and 78 are started I get more than one for TB 78. I only get one for TB 68.
Bill
Comment 16•5 years ago
|
||
(In reply to wrhenshaw99 from comment #15)
I guess I'm confused
Some days I start and quit Thunderbird maybe 100 times. One tray icon remains for each of these start-end sessions. But there are not several tray icons for a single session, I suspect.
If this is different for you, then at least at the moment I cannot reproduce it.
| Reporter | ||
Comment 17•5 years ago
|
||
I leave TB open all the time. If I'm testing TB 78, then I leave it open all the time as well as TB 68 which is still my "main" mail reader.
Sometimes I get a new tray icon in TB 78 for every message I receive. This doesn't happen every time, but yesterday it grew to 34 icons for TB 78. Then when I close TB 78 the icons remain. They only go away when I run my mouse cursor over them.
Bill
| Reporter | ||
Comment 18•5 years ago
|
||
I finally bit the bullet and uninstalled my test install of TB 78 and installed TB 78 over TB 68. I now no longer seem to be getting multiple icons. It appears that what Alex pointed out in comment 12 was in fact the cause. So, this issue can be closed as far as I'm concerned.
Bill
Updated•5 years ago
|
| Reporter | ||
Comment 19•5 years ago
|
||
I spoke too soon. After using TB 78 for a few days I continue to get multiple icons on occasion and also have the problem with the icon or icons not going away after closing TB 78.
I no longer have TB 68 installed on the machine so I am not running multiple thunderbird versions at the same time, I don't even have multiple versions installed.
Bill
| Assignee | ||
Comment 20•5 years ago
|
||
Attempt to fix this by removing the icon at shutdown.
The patch is from Postbox (credit where credit is due) and they allowed the port.
Comment 21•5 years ago
|
||
| Assignee | ||
Updated•5 years ago
|
Comment 22•5 years ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/f40baed97e8f
Ensure that the new mail icon is removed from the system tray at shutdown. r=mkmelin
Updated•5 years ago
|
| Reporter | ||
Comment 23•5 years ago
|
||
I am the original author of this bug report.
I see this issue is marked as closed. Does it also correct the bug mentioned in the original posting? I mentioned in comment #19 that I am still having this issue.
The problem was twofold. First I get sometimes get multiple icons in the tray even without closing TB. In other words, I have TB open and I get a message and an icon appears in the tray. Later I will have two and then three. One time I got up to 34 icons in the tray at one time. All this without ever closing TB.
The other problem was the one where the icon didn't always go away when TB was closed. This is the part that your fix seems to address.
Bill
| Assignee | ||
Comment 24•5 years ago
|
||
It addresses only the not clearing icon when closing. Never seen the other issue and it seems also only you have seen this.
| Reporter | ||
Comment 25•5 years ago
|
||
In comment #10 Magnus said "To fix it we need to find out what the cause is - why it happens on your system but not in general.".
The problem only started in TB 78. I've been using TB for years and never had the problem in any earlier release. If I uninstall TB 78 at this point and reinstall TB 68, the problem goes away. If I then uninstall TB 68 and reinstall TB 78, the problem comes back.
How can we determine what the problem is and resolve it?
Bill
Comment 26•5 years ago
|
||
Finding it is often a combination of luck and putting pieces of the puzzle together. Usually not easy.
| Reporter | ||
Comment 27•5 years ago
|
||
@Magnus
I didn't think it would be easy, but I was hoping that I could work with support to try to figure it out so I don't have this issue. I'm a bit disappointed that my issue was closed when only half of it has actually been addressed.
Bill
Comment 28•5 years ago
|
||
Maybe this bug and bug 1559448 (Shutdown crash [@ AsyncShutdownTimeout | profile-change-teardown | Extension shutdown: wetransfer@extensions.thunderbird.net ]) are connected together:
bp-90114848-75e0-4730-8653-c81a00201119
85.0a1 (2020-11-19) (64-bit)
=> open Activity Manager
=> write Mail to own IMAP
=> close TB main window
=> Activity Manager didn't close, TaskSymbol "new Mail" stay visible
=> crash happen after closing Activity Manager window
"new Mail" symbol is shown in taskbar
Foreach TB close crash (while having new Mail) there is a living "new mail" notification icon in Windows 10 20H2 64bit
| Assignee | ||
Comment 29•5 years ago
|
||
Comment on attachment 9188788 [details] [diff] [review]
1664586-remove-bifficon-on-close.patch
[Approval Request Comment]
User impact if declined: new mail icons could stay in try after closing TB
Testing completed (on c-c, etc.): on c-c
Risk to taking this patch (and alternatives if risky): should be low. Tested with closing TB, with having a new mail icon, multiple times and no crash or so happened.
Comment 30•5 years ago
|
||
Comment on attachment 9188788 [details] [diff] [review]
1664586-remove-bifficon-on-close.patch
[Triage Comment]
Approved for beta
Comment 31•5 years ago
|
||
Close bug 764810 and bug and bug 1114768 now? We've seen this issue for years, glad it's finally fixed.
| Reporter | ||
Comment 34•5 years ago
|
||
Very strange. I opened the issue. I reported my problems. The name of the issue was changed without any input from me. The #1 bug reported was not fixed. The issue was closed. Why did I bother reporting it?
Comment 35•5 years ago
|
||
(In reply to wrhenshaw99 from comment #34)
Very strange. I opened the issue. I reported my problems. The name of the issue was changed without any input from me. The #1 bug reported was not fixed. The issue was closed. Why did I bother reporting it?
How can the issue be fixed in the version you are currently using if you haven't had an update to a version with the bug fix applied.
The bug fix was approved for beta uplift 22 hours ago.
A new beta needs to be built and tested.
Then the request for an uplift to the release occurs.
Then it gets built and tested.
As they say, "Rome wasn't built in a day".
The summary may have been updated to more accurately describe the issue.
Thanks for reporting the issue.
| Reporter | ||
Comment 36•5 years ago
|
||
I'm confused. In comment #24 Richard said the beta did not include a fix for my original #1 problem. The fix only applies to the #2 problem I reported. My original title for the issue was something along the lines of multiple icons in the tray because it didn't only apply to a problem when TB was being closed. The title was changed to TB 78 tray notification issues (tray notification stay around after close, if multiple thunderbird versions running at the same time). So the focus of the issue changed, but I didn't make this change.
Then the issue was closed. But as far as I understand it, the #1 issue hasn't been fixed and there is no beta is being built to be tested. If I am misunderstanding the situation and work is till being done to fix the #1 issue, then why is the issue closed?
Please do correct me if my understanding is not correct.
Bill
| Reporter | ||
Comment 37•5 years ago
|
||
In any case, at this point the problem only happens sporadically so I can live with it. The problem happened much more frequently when I had both TB 68 and TB 78 installed. At this point I have only TB 78 installed.
I was only frustrated because the issue was closed even though only half of it was addressed. I guess if I'm the only one experiencing the issue then it probably doesn't warrant the effort to try to fix it.
Sorry if I got too strident in my vocalization of my frustration.
Bill
Comment 38•5 years ago
|
||
| bugherder uplift | ||
Thunderbird 84.0b2:
https://hg.mozilla.org/releases/comm-beta/rev/511b93dbaf5b
Comment 39•5 years ago
|
||
Comment on attachment 9188788 [details] [diff] [review]
1664586-remove-bifficon-on-close.patch
[Triage Comment]
Approved for esr78
Comment 41•5 years ago
|
||
| bugherder uplift | ||
Thunderbird 78.5.1:
https://hg.mozilla.org/releases/comm-esr78/rev/e7bdab0e0bf4
Comment 42•5 years ago
|
||
You wrongly marked Bug 1678752 as a duplicate. It has nothing to do with new mail tray icon.
Description
•