Bug 1664586 - Ensure that the new mail icon is removed from the system tray at shutdown. r=mkmelin